amélioration modèle de données